deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-ingress-linklist
  labels:
    app.kubernetes.io/name: k8s-ingress-linklist
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: k8s-ingress-linklist
